refactor: deleteAll 사용하지 않기